traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:13: error: ')' expected but '}' found.
  }
  ^TraversalByColumn:15: error: ')' expected but '}' found.
}
^