traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var a=getMondeHauteur()
  var b=getMondeLargeur()
	var cpt=0
  var y=0
  var k=0
  while (getX()!=(a-1) && getY!=(b-1){
    for (k<-0 to (b-1){
      ecritMessage(cpt)
      setPos(x,k+1)
      cpt+=1
    }
    x=x+1
  }

}
